--- a/style.css
+++ b/style.css
@@ -1501,7 +1501,7 @@ header, main, footer {
         width: 40px;
         height: 40px;
     }
-    .redes-sociales{
+    .footer-redes-sociales .redes-sociales{
         width: 100%;
         gap: 3px;
     }
